# django_example

./: .gitignore  README.md  pyproject.toml
lume/: db.sqlite3  manage.py
lume/lume/: asgi.py  settings.py  urls.py  wsgi.py
lume/tasks/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
lume/tasks/migrations/: 0001_initial.py
lume/tasks/templates/tasks/: task_confirm_delete.html  task_form.html  task_list.html
