[tool.poetry]
name = "django-example"
version = "0.1.0"
description = "Example of usage for django"
authors = ["Luigi Menale <lume.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.ruff]
lint.select = ["E", "F", "W"]
lint.ignore = []
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
